src/main/java/com/example/api/security/error/UserAlreadyExistsException.java
package com.example.api.security.error;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}
